--- a/hello-react/src/components/style.css
+++ b/hello-react/src/components/style.css
@@ -1,9 +1,9 @@
 .todo {
-    width: 100%;
+    display: flex;
 }
 
 .wrap {
-    width: 50%;
-    display: inline-block;
-    vertical-align: top;
+    flex: 1;
+    min-height: 200px;
+    border: solid;
 }
